Rigidbody playback and simulation performance regression with new depsgraph #50027

Closed
opened 2016-11-14 18:00:40 +01:00 by Martin Felke · 6 comments
Member

System Information
Linux Mint 17.3 64 bit, GTX 580

Blender Version
Broken: 2.78a (with --enable-new-depsgraph)
Worked: 2.78a (without --enable-new-depsgraph)

Short description of error
Rigidbody simulation with 4000 cubes (as example) and especially the cached playback performance is nearly reduced by about 40-45% with the new depsgraph. In uncached sim the difference is lower,
maybe about 15-20%

Exact steps for others to reproduce the error
Open attached blend and Alt A, simulate about 50 frames or more... jump back to frame 1 and play back the cache, note the FPS indicator (24 for me) and repeat steps
with "--enable-new-depsgraph" start option ... note at cached playback FPS about 13.

depsbench1.blend

**System Information** Linux Mint 17.3 64 bit, GTX 580 **Blender Version** Broken: 2.78a (with --enable-new-depsgraph) Worked: 2.78a (without --enable-new-depsgraph) **Short description of error** Rigidbody simulation with 4000 cubes (as example) and especially the cached playback performance is nearly reduced by about 40-45% with the new depsgraph. In uncached sim the difference is lower, maybe about 15-20% **Exact steps for others to reproduce the error** Open attached blend and Alt A, simulate about 50 frames or more... jump back to frame 1 and play back the cache, note the FPS indicator (24 for me) and repeat steps with "--enable-new-depsgraph" start option ... note at cached playback FPS about 13. [depsbench1.blend](https://archive.blender.org/developer/F398923/depsbench1.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Sergey Sharybin was assigned by Martin Felke 2016-11-14 18:01:57 +01:00
Author
Member

Assigning to Sergey by IRC request from him.

Assigning to Sergey by IRC request from him.

I've committed some optimizations, last one is at 7471f09. Please give it a try.

P.S. This is a partial changes form the patch we've discussed in IRC, but some of the changes from there are reverted because on a second glance were required for a proper work. I'll try to merge those to a single function call to avoid overhead in the nearest future.

I've committed some optimizations, last one is at 7471f09. Please give it a try. P.S. This is a partial changes form the patch we've discussed in IRC, but some of the changes from there are reverted because on a second glance were required for a proper work. I'll try to merge those to a single function call to avoid overhead in the nearest future.

This issue was referenced by a481908232

This issue was referenced by a481908232ef20449e6ad6951769677e0b108ca8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50027
No description provided.